--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AULA GIT HUB</title>
+        <link rel="stylesheet" href="style.css">
     </head> 
 <body>
-    <h1>AULA GIT HUB</h1>    
+    <h1>AULA GIT HUB</h1>
+    <figure>
+        <img src="baby-groot-4k-hd-superheroes-wallpaper-preview.jpg" alt="">
+    </figure>  
+    
 </body>
 </html>
